# dynamodb_table

./: Cargo.toml  README.md
internal/src/: lib.rs
src/: lib.rs
table_macro/: Cargo.toml
table_macro/src/: lib.rs
